[package]
name = "mirror"
version = "0.0.1"
description = "Sync, Mirror and Serve"
edition = "2021"

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
once_cell = "*"

env_logger = "*"
log = { version = "*", features = ["std", "max_level_debug", "release_max_level_debug"] }

hyper = { version = "*", features = ["full"] }
hyper-staticfile = "*"
reqwest = "*"

serde = { version = "1", features = ["std", "derive"] }
serde_yaml = "*"

tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "*"

zip = { version = "*", default-features = false }
